--- a/Costomer/css/style.css
+++ b/Costomer/css/style.css
@@ -1,30 +1,57 @@
 
+
+
+/* ==============================style css costomer====================================== */
+
 body{
-    background-color: rgb(179, 179, 199);
+    background-color: rgb(219, 219, 235);
 }
 .nav-bar{
-    background-color: rgb(97, 97, 221);
+    background-color: rgb(65, 65, 211);
     display: flex;
     justify-content:space-around ;
     padding: 10px;
+    border-radius: 10px;
+}
+.bar-right img {
+    width: 10%;
+    margin-left: 90%;
+}
+#name-research {
+    padding: 9px;
+    border: none;
+    background-color: rgb(36, 74, 198);
+    color: white;
+    border-radius: 10px; 
+}
+.image img{
+    width: 30%;
 }
 .search{
-    margin-top: 30px;
+    margin-top: 10%;
     width: 50%;
+    margin-left: 28%; 
 }
  .search input[type="search"]{
-    padding: 20px;
+    padding: 10px;
     width: 90%;
+    border: 3px solid red;
+    border-radius: 10px; 
  }
  .search ::placeholder{
     font-size: larger;
  }
-.bar-right ul ,li{
+ #cart-img img{
+    width: 15%;
+    margin-left: 90%;
+    margin-top: -85%;
+ }
+/* .bar-right ul ,li{
     display: flex;
     justify-content: space-evenly;
     margin: 20px;
     color: white;
-}
+} */
 .text-center img{
    margin-left: 14%;
    margin-top: 5%;
@@ -35,21 +62,26 @@ body{
 }
 
 .img-card {
-    background-color: rgb(89, 99, 109);
     margin: 30px;
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 30px;
     margin-top: 100px;
+    width: 25%;
+    background-color: rgb(36, 36, 179);
+}
+.img-card:hover{
+    box-shadow: rgba(11, 47, 211, 0.56) 0px 30px 80px 4px;
 }
 .main-card{
     display: flex;
     justify-content: center;
-    
-    
+    flex-wrap: wrap;
+
 }
 .img-card h2,h3{
     text-align: center;
     color: rgb(213, 205, 193);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .img-card h4{
     color:orange;
@@ -57,33 +89,86 @@ body{
     text-align: center;
 }
 .img-card img{
-    width: 60%;
-    margin-top: -60px;
-    border-radius: 20px;
-    margin-left: 60px;
-    
+    width: 100%;
+    /* margin-top: 60px; */
+    border-radius: 5px;
 }
-/* .img-card{
-    justify-content: center;
-    display: flex;
-} */
+.img-card img:hover{
+    border: 6px solid rgb(255, 77, 0);
+}
+
 .footer{
     background-color: rgb(32, 28, 28);
     padding: 50px;
 }
-.footer h1,h2{
+.footer h1,h2, h3{
     color: white;
     text-align: center;
 }
+
 .material-icons{
     background-color: orange;
     padding: 20px;
     border-radius: 50%;
     margin: 10px;
-   
 }
 .icon{
     display: flex;
     justify-content: center;
-    
+}
+
+
+/* ========================style CSS detail product============================== */
+
+
+.detail{
+    background-color: rgb(217, 66, 46);
+    padding: 5px;
+    color: white;
+}
+
+.main-detail img{
+    width: 30%;
+    margin-left: 33%;
+    border: 3px solid rgb(227, 14, 14);
+   
+    box-shadow: rgba(19, 54, 195, 0.2) 0px 60px 50px -7px;
+}
+
+.detail-container{
+    background-color: rgb(23, 23, 116);
+    padding: 4%; 
+}
+.detail-title h1{
+    text-align: center;
+}
+.price-product h2{
+    color: rgb(227, 153, 25);
+    background-color: azure;
+}
+#button-back{
+    background-color:red;
+    padding: 10px;
+    width: 10%;
+    color: white;
+}
+h3{
+    color:rgb(210, 191, 191) ;
+}
+.detail-title{
+    color: rgb(213, 213, 213);
+}
+
+
+/* ===========================style css show cart================== */
+
+.main-cart img {
+    width: 30%;
+}
+.show-cart{
+    background-color: rgb(0, 76, 255);
+    margin-left: 70%;
+    color: white;
+    padding: 1%;
+    border: 1px solid black;
 }
